parallel streaming starts